--- a/client/index.html
+++ b/client/index.html
@@ -15,5 +15,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    
+    <script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2024/12/17/12/20241217125300-339ZVZ0Z.js"></script>
+    
   </body>
 </html>
